# PyAOF

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  tests.yml
api/: index.html
docs/: api.md  index.md
examples/: demo_cuboid.py  demo_polyscope.py
pyaof/: __init__.py  aof.py  meshing.py  st.py
search/: search_index.json
tests/: test_aof.py
